Pave the streets
The plan has carried streets for three commits and nothing consumed
them: PathPlanner still ran a track from each new door to whatever road
passed nearest, which is roads as a CONSEQUENCE of buildings. Every real
settlement works the other way round. Now a planned street enters the
network as ordinary runs, so everything downstream needed no changes at
all -- a builder walks out and opens it, the layer mends it when it grows
over, the palisade counts it when deciding where its gates go, and siting
consults it so the next house goes up near a street rather than in a
field. The only things that make them streets are that they bend and they
are wider.

Two enabling changes, both no-ops for what existed:

A run may go diagonally, and carries its own width. The right-angle rule
was sound for the runs it was written for -- a track that cuts a corner
leaves no square ground to put the next building against -- but that is a
rule about how PathPlanner ROUTES, and it still holds there. It is not a
rule about what a way can be. length() and positions() give exactly their
old answers for an axis-aligned run; the alternative was staircasing every
street into hundreds of one-block runs, or a parallel structure the gates,
siting, mending and save each had to learn separately.

And planFor now lays at a fixed size and hands out a prefix. Every number
in a plan derives from the count, so laying at the size asked meant the
same town had different geometry depending on how much of it anybody had
asked about -- a settlement that grew past its cached plan had the plan
re-laid underneath it and plot five moved. The determinism rule asks twice
in a row, which passes; the answer only changed after growth. It surfaced
here because a road laid along a plan that shifts under the houses is a
road through the houses.

Streets are laid where the town has reached, not everywhere the plan
describes. Laying the lot first gave sixty-two buildings 405 stretches of
carriageway and 30,